istio/traffic/helloworld/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-mesh
spec:
  hosts:
  - "helloworld"
  gateways:
  - mesh
  http:
  - match:
    - headers:
        ver:
          exact: v1
    route:
    - destination:
        host: helloworld
        port:
          number: 5000
        subset: v1
  - match:
    - headers:
        ver:
          exact: v2
    route:
    - destination:
        host: helloworld
        port:
          number: 5000
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld
spec:
  host: helloworld
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
